<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddRestaurant"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dim"
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/large_margin"
        >
    <ImageView
        android:layout_width="@dimen/addRestIconSize"
        android:layout_height="@dimen/addRestIconSize"
        android:src="@drawable/add_rest_icon"
        android:layout_gravity="center"
        ></ImageView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_restaurant"
        android:textStyle="bold"
        android:textSize="@dimen/largeText"
        android:gravity="center"
        android:layout_marginTop="@dimen/small_margin"
        android:textColor="@color/addRestColor"
        android:fontFamily="cursive"
        ></TextView></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dim"
        android:layout_weight="5"
        android:layout_margin="@dimen/medium_margin"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/rest_color"
            android:hint="@string/restaurant_name"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/rest_color"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/list_item_text_size"
                android:id="@+id/etARName"
                ></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/rest_color"
            android:hint="@string/restaurant_location"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/rest_color"
            android:layout_marginTop="@dimen/small_margin"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/list_item_text_size"
                android:id="@+id/etARLocation"
                ></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/rest_color"
            android:hint="@string/restaurant_desc"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/rest_color"
            android:layout_marginTop="@dimen/small_margin"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/list_item_text_size"
                android:id="@+id/etARDesc"
                ></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/rest_color"
            android:hint="@string/restaurant_phone"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/rest_color"
            android:layout_marginTop="@dimen/small_margin"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/list_item_text_size"
                android:inputType="phone"
                android:id="@+id/etARPhone"
                ></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/rest_color"
            android:hint="@string/restaurant_rating"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/rest_color"
            android:layout_marginTop="@dimen/small_margin"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/list_item_text_size"
                android:inputType="numberDecimal"
                android:id="@+id/etARRating"
                ></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:backgroundTint="@color/filter_menu"
            android:text="@string/add_restaurant"
            android:textSize="@dimen/list_item_text_size"
            android:textStyle="bold"
            android:id="@+id/addBtn"
            ></Button>


    </LinearLayout>

</LinearLayout>